    config options so that you can specify actual bold
    italic, and bold-italic TrueType fonts for use with
    the TTF output that will render the bold, italic,
    and bold-italic text styles using the actual TTF
    fonts (e.g. consolab, consolai, consolaz instead of
    consola) instead of making the original TTF font
    bold, italic, bold-italic automatically. (Wengier)
  - Added SETCOLOR command to view or change the text-
    mode color scheme settings. Also fixed the color
    palette for the TTF output. (Wengier)
  - Separated "TTF options" menu group that contains
    TrueType font (TTF) related menu options from the
    "Text-mode" menu group in "Video" menu. (Wengier)
  - The "Show menu bar" option now appears in system
    menu of the Windows SDL2 build too. (Wengier)
  - If a language file fails to load, DOSBox-X will now
    show a warning dialog instead of exiting. (Wengier)
  - Fixed the mouse sensitivity menu option (under the
    "DOS" menu) not working. (Wengier)
  - Fixed the color palette problem when switching to
    graphic mode from mono mode. (Wengier)
  - Fixed full-screen TTF output may not fully cover
    the background screen in Linux. (Wengier)
  - Fixed that lines starting with "%" in [autoexec]
    section are being ignored. (Wengier)
  - Improved the dynamic core including the way its
    cache is allocated and to support dual mapping.
  - Added support for automatic switching from TTF
    ouptut to another output in PC-98 mode, allowing
    Windows 3.1 to run in this mode. (Wengier)
  - Added OPL3Duo support, which passes OPL3 output
    to an OPL3Duo Arduino board with a specific
    configuration if desired. Set the config option
    "oplemu=opl3duoboard" to use it. (josephillips85)
0.83.8
  - Added support for scalable TrueType font (TTF)
    output for text-mode programs. Set "output=ttf"
    and optionally a monospaced TTF font (such as
    consola) with config option "ttf.font" to use it.